k8s/infrastructure/monitoring/victoria-metrics-k8s-stack/base/victoria-metrics/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics
  namespace: monitoring
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-talmox-hera-home-karlsen-fr}
  hostnames: [victoriametrics.talmox.hera.home.karlsen.fr]
  rules:
    - matches: [path: {type: PathPrefix, value: /}]
      backendRefs: [{name: vmsingle-victoria-metrics-k8s-stack, kind: Service, port: 8428}]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - {namespace: gateway, name: internal, sectionName: https-wc-talmox-hera-home-karlsen-fr}
  hostnames: [alertmanager.talmox.hera.home.karlsen.fr]
  rules:
    - matches: [path: {type: PathPrefix, value: /}]
      backendRefs: [{name: vmalertmanager-victoria-metrics-k8s-stack, kind: Service, port: 9093}]
